--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <footer>
 
     </footer>
-    <script src="script.js"></script>
-    <script src="practica.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/practica.js"></script>
 </body>
 </html>
