--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a class="link" href="./pages/productos.html">
                         <img class="w-100" src="./multi/panaderia.jpg" alt="Panaderia"/>
                         <br/>
-                        <h4 class="p-1">Prueba</h4>
+                        <h4 class="p-1">Panaderia</h4>
                     </a>
                 </div>
                 <div class="p-3 text-center col accesos">
