formateado de tarjetas de producto

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -42,11 +42,11 @@
     <main>
         <section class="pedido">
             <h1 class="col">Realiza tu pedido</h1>
-            <article class="row store">
+            <article class="row filters">
                 <div class="col-2 filtros">
-
+                    
                 </div>
-                <div class="col-10 objetos">
+                <div id="objetos" class="col-10">
 
                 </div>
             </article>
