--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <!--Fuentes-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Norican&display=swap" rel="stylesheet">
-        <!--Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
-        <!--CSS-->
-        <link rel="stylesheet" href="../CSS/stylesheet.css"/>
-        <title>🥐 La flor del trigo 🥐</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Norican&display=swap"
+        rel="stylesheet">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <!--CSS-->
+    <link rel="stylesheet" href="../CSS/stylesheet.css" />
+    <title>🥐 La flor del trigo 🥐</title>
+</head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid d-flex justify-content-between">
-                <a class="navbar-brand d-flex align-items-center" href="../index.html"><img class="logo" src="../multi/logopana.png" alt="Logo panaderia"><h1 class="nombre">La Flor del Trigo</h1></a>
+                <a class="navbar-brand d-flex align-items-center" href="../index.html"><img class="logo"
+                        src="../multi/logopana.png" alt="Logo panaderia">
+                    <h1 class="nombre">La Flor del Trigo</h1>
+                </a>
                 <div class="w-50">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav nav-underline nav-justified me-auto mb-2 mb-lg-0 w-100 text-center">
                             <li class="nav-item menuItem">
-                                <a class="nav-link"  href="../index.html">Home</a>
+                                <a class="nav-link" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item menuItem">
-                                <a class="nav-link active" aria-current="page" href="./pages/productos.html">Productos</a>
+                                <a class="nav-link active" aria-current="page"
+                                    href="./pages/productos.html">Productos</a>
                             </li>
                             <li class="nav-item menuItem">
                                 <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -42,12 +51,27 @@
     <main>
         <section class="pedido">
             <h1 class="col">Realiza tu pedido</h1>
-            <article class="row filters">
-                <div class="col-2 filtros">
-                    
+            <article class="row store">
+                <div id="filtros" class="col-2">
+                    <h2 class="titulo">Filtros</h2>
+                    <button value="factura" class="botonFiltro">Factura</button>
+                    <button value="tarta" class="botonFiltro">Tartas dulces</button>
+                    <button value="torta" class="botonFiltro">Tortas</button>
+                    <button value="masitas" class="botonFiltro">Masitas</button>
+                    <button value="alfajor" class="botonFiltro">Alfajores</button>
+                    <button value="budin" class="botonFiltro">Budines</button>
+                    <button value="panDulce" class="botonFiltro">Pan dulce</button>
+                    <button value="pan" class="botonFiltro">Pan</button>
+                    <button value="sangucheDeMiga" class="botonFiltro">Sanguches de miga</button>
+                    <button value="galletitas" class="botonFiltro">Galletitas</button>
+                    <button value="tartaSalada" class="botonFiltro">Tartas saladas</button>
+                    <button value="sanguche" class="botonFiltro">Sanguches</button>
+                    <button value="prepizza" class="botonFiltro">Prepizza</button>
+                    <button value="chipa" class="botonFiltro">Chipa</button>
+                    <button class="botonFiltro">Eliminar filtros</button>
                 </div>
                 <div id="objetos" class="col-10">
-
+                    <!--Tarjetas de producto en JS-->
                 </div>
             </article>
         </section>
@@ -67,8 +91,11 @@
         </div>
     </footer>
     <!--Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!--Javascript-->
     <script src="../js/script.js"></script>
 </body>
+
 </html>
