optimizacion de codigo agregado de imagenes y funcionalidades

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -53,7 +53,7 @@
             <h1 class="col">Realiza tu pedido</h1>
             <article id="store" class="row">
                 <div id="filtros" class="col-2">
-                    <h2 class="titulo">Filtros <button id="mostrarCarrito" class="botonCarrito">Mostrar carrito</button></h2>
+                    <h2 class="titulo">Filtros <button id="mostrarCarrito" class="botonCarrito">Ver/Ocultar carrito</button></h2>
                     <button class="botonFiltro">Eliminar filtros</button>
                     <button value="factura" class="botonFiltro">Factura</button>
                     <button value="tarta" class="botonFiltro">Tartas dulces</button>
@@ -79,6 +79,7 @@
                         <!--Tarjetas de carrito en JS-->
                     </div>
                 </div>
+                <button id="finalizarCompra">Finalizar compra</button>
             </article>
         </section>
     </main>
