reincorporacion del mapa y comienzo de funcionalidad responsive

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         </section>
         <section class="ubicacion">
             <div>
-                <!--<h4 class="direccion">Donde encontrarnos</h4>
-                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13136.577681849107!2d-58.4668866!3d-34.6005094!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb601b96b9ba7%3A0xb1db97f098911016!2sLa%20Flor%20del%20Trigo!5e0!3m2!1ses!2sar!4v1712231793801!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+                <h4 class="direccion">Donde encontrarnos</h4>
+                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13136.577681849107!2d-58.4668866!3d-34.6005094!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb601b96b9ba7%3A0xb1db97f098911016!2sLa%20Flor%20del%20Trigo!5e0!3m2!1ses!2sar!4v1712231793801!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
