--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
             </div>
             <div class="container p-2 w-75 justify-content-between row">
                 <div class="p-3 text-center col accesos">
-                    <a class="link" href="./pages/productos.html">
+                    <a id="panaderia" class="link" href="./pages/productos.html">
                         <img class="w-100" src="./multi/panaderia.jpg" alt="Panaderia"/>
                         <br/>
                         <h4 class="p-1">Panaderia</h4>
                     </a>
                 </div>
                 <div class="p-3 text-center col accesos">
-                    <a class="link" href="./pages/productos.html">
-                        <img class="w-100" src="./multi/pasteleria.jpg" alt="Pasteleria"/>
+                    <a id="dulces" class="link" href="./pages/productos.html">
+                        <img class="w-100" src="./multi/pasteleria.jpg" alt="Dulces"/>
                         <br/>
-                        <h4 class="p-1">Pasteleria</h4>
+                        <h4 class="p-1">Dulces</h4>
                     </a>
                 </div>
                 <div class="p-3 text-center col accesos">
-                    <a class="link" href="./pages/productos.html">
+                    <a id="salados" class="link" href="./pages/productos.html">
                         <img class="w-100" src="./multi/salados.jpg" alt="Salados"/>
                         <br/>
                         <h4 class="p-1">Salados</h4>
@@ -92,12 +92,12 @@
             <img class="logo" src="./multi/logopana.png" alt="Logo panaderia">
             <h1 class="nombre">La Flor del Trigo</h1>
         </div>
-        <div class="redes">
+        <div class="text-right">
             <h2>Proximamente encontranos en nuestras redes!</h2>
             <div class="d-flex justify-content-evenly">
-                <a href=""><img src="./multi/facebook.png" alt="facebook"></a>
-                <a href=""><img src="./multi/instagram.png" alt="instagram"></a>
-                <a href=""><img src="./multi/whatsapp.png" alt="whatsapp"></a>
+                <a href=""><img src="./multi/facebook.png" alt="facebook" class="redes"></a>
+                <a href=""><img src="./multi/instagram.png" alt="instagram" class="redes"></a>
+                <a href=""><img src="./multi/whatsapp.png" alt="whatsapp" class="redes"></a>
             </div>
         </div>
     </footer>
