--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,12 +47,12 @@
             <img class="logo" src="../multi/logopana.png" alt="Logo panaderia">
             <h1 class="nombre">La Flor del Trigo</h1>
         </div>
-        <div class="redes">
+        <div class="text-right">
             <h2>Proximamente encontranos en nuestras redes!</h2>
             <div class="d-flex justify-content-evenly">
-                <a href=""><img src="../multi/facebook.png" alt="facebook"></a>
-                <a href=""><img src="../multi/instagram.png" alt="instagram"></a>
-                <a href=""><img src="../multi/whatsapp.png" alt="whatsapp"></a>
+                <a href=""><img src="../multi/facebook.png" alt="facebook" class="redes"></a>
+                <a href=""><img src="../multi/instagram.png" alt="instagram" class="redes"></a>
+                <a href=""><img src="../multi/whatsapp.png" alt="whatsapp" class="redes"></a>
             </div>
         </div>
     </footer>
