comienzo de la pagina nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -40,6 +40,11 @@
         </nav>
     </header>
     <main>
+        <h1>Quienes somos</h1>
+        <p>Somos una empresa familiar que se conformo cuando Antonio, Manuel y Maria llegamos de España con el sueño y el objetivo de desarrollarnos en este hermoso pais, desde la experiencia y el cariño fundamos la flor del trigo donde personalmente nos ocupamos de que la calidad, la tradicion y el buen sabor que todo el amor da a nuestros productos sea el pilar de nuestra panaderia.
+            <br>
+        
+        </p>
 
     </main>
     <footer class="d-flex justify-content-between p-3">
