Finalizacion de la pagina nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -40,12 +40,21 @@
         </nav>
     </header>
     <main>
-        <h1>Quienes somos</h1>
-        <p>Somos una empresa familiar que se conformo cuando Antonio, Manuel y Maria llegamos de España con el sueño y el objetivo de desarrollarnos en este hermoso pais, desde la experiencia y el cariño fundamos la flor del trigo donde personalmente nos ocupamos de que la calidad, la tradicion y el buen sabor que todo el amor da a nuestros productos sea el pilar de nuestra panaderia.
-            <br>
-        
-        </p>
-
+        <section class=" d-flex flex-column align-items-center nosotros">
+            <h1 class="text-center titulo">Quienes somos</h1>
+            <p class="text-center descripcion">
+                Somos una empresa familiar que se conformo cuando Antonio, Manuel y Maria llegamos de España con el sueño y el objetivo de desarrollarnos en este hermoso pais, desde la experiencia y el cariño fundamos la flor del trigo donde personalmente nos ocupamos de que la calidad, la tradicion y el buen sabor que todo el amor da a nuestros productos sea el pilar de nuestra panaderia.
+                <br>
+                <br>
+                Nos encontramos en la Av. Manuel Ricardo Trelles 2450 desde hace mas de 15 años brindando siempre el mejor servicio y calidad
+            </p>
+            <h2 class="text-center subtitulo">
+                Que esperas para conocernos!
+                <br>
+                Te estamos esperando!
+            </h2>
+            <img src="../multi/fotopana.jpg" alt="foto frente">
+        </section>
     </main>
     <footer class="d-flex justify-content-between p-3">
         <div class="d-flex align-items-center">
