--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 class="frase">Artesania y tradicion</h1>
             </div>
             <div class="container-fluid align-self-end p-3 fondocontraste">
-                <h2 class="m-5 p-5 vision">
+                <h2 class="vision">
                     Nuestro compromiso con la calidad y el barrio es inigualable
                     <br/>
                     Dedicamos todo el amor y la experiencia a cada hora del dia para llevarte los productos mas ricos y sanos
@@ -59,21 +59,21 @@
             <div class="container p-2 w-75 justify-content-between row">
                 <div class="p-3 text-center col accesos">
                     <a id="panaderia" class="link" href="./pages/productos.html">
-                        <img class="w-100" src="./multi/panaderia.jpg" alt="Panaderia"/>
+                        <img src="./multi/panaderia.jpg" alt="Panaderia"/>
                         <br/>
                         <h4 class="p-1">Panaderia</h4>
                     </a>
                 </div>
                 <div class="p-3 text-center col accesos">
                     <a id="dulces" class="link" href="./pages/productos.html">
-                        <img class="w-100" src="./multi/pasteleria.jpg" alt="Dulces"/>
+                        <img src="./multi/pasteleria.jpg" alt="Dulces"/>
                         <br/>
                         <h4 class="p-1">Dulces</h4>
                     </a>
                 </div>
                 <div class="p-3 text-center col accesos">
                     <a id="salados" class="link" href="./pages/productos.html">
-                        <img class="w-100" src="./multi/salados.jpg" alt="Salados"/>
+                        <img src="./multi/salados.jpg" alt="Salados"/>
                         <br/>
                         <h4 class="p-1">Salados</h4>
                     </a>
@@ -87,13 +87,13 @@
             </div>
         </section>
     </main>
-    <footer class="d-flex justify-content-between p-3">
+    <footer class="d-flex justify-content-between flex-column flex-sm-row p-3">
         <div class="d-flex align-items-center">
             <img class="logo" src="./multi/logopana.png" alt="Logo panaderia">
             <h1 class="nombre">La Flor del Trigo</h1>
         </div>
         <div class="text-right">
-            <h2>Proximamente encontranos en nuestras redes!</h2>
+            <h2 class="proximamente">Proximamente encontranos en nuestras redes!</h2>
             <div class="d-flex justify-content-evenly">
                 <a href=""><img src="./multi/facebook.png" alt="facebook" class="redes"></a>
                 <a href=""><img src="./multi/instagram.png" alt="instagram" class="redes"></a>
