--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -56,13 +56,13 @@
             <img src="../multi/fotopana.jpg" alt="foto frente">
         </section>
     </main>
-    <footer class="d-flex justify-content-between p-3">
+    <footer class="d-flex justify-content-between flex-column flex-sm-row p-3">
         <div class="d-flex align-items-center">
             <img class="logo" src="../multi/logopana.png" alt="Logo panaderia">
             <h1 class="nombre">La Flor del Trigo</h1>
         </div>
         <div class="text-right">
-            <h2>Proximamente encontranos en nuestras redes!</h2>
+            <h2 class="proximamente">Proximamente encontranos en nuestras redes!</h2>
             <div class="d-flex justify-content-evenly">
                 <a href=""><img src="../multi/facebook.png" alt="facebook" class="redes"></a>
                 <a href=""><img src="../multi/instagram.png" alt="instagram" class="redes"></a>
