--- a/pages/productos.html
+++ b/pages/productos.html
@@ -52,8 +52,9 @@
         <section class="pedido">
             <h1 class="col">Realiza tu pedido</h1>
             <article id="store" class="row">
-                <div id="filtros" class="col-2">
-                    <h2 class="titulo">Filtros <button id="mostrarCarrito" class="botonCarrito">Ver/Ocultar carrito</button></h2>
+                <div id="filtros" class="col-sm-2">
+                    <h2 class="titulo">Filtros</h2>
+                    <button id="mostrarCarrito" class="botonCarrito">Ver/Ocultar carrito</button>
                     <button class="botonFiltro">Eliminar filtros</button>
                     <button value="factura" class="botonFiltro">Factura</button>
                     <button value="tarta" class="botonFiltro">Tartas dulces</button>
@@ -70,7 +71,7 @@
                     <button value="prepizza" class="botonFiltro">Prepizza</button>
                     <button value="chipa" class="botonFiltro">Chipa</button>
                 </div>
-                <div id="objetos" class="col-10">
+                <div id="objetos" class="col-sm-10">
                     <!--Tarjetas de producto en JS-->
                 </div>
                 <div id="contenedorCarrito" class="oculto col">
@@ -83,13 +84,13 @@
             </article>
         </section>
     </main>
-    <footer class="d-flex justify-content-between p-3">
+    <footer class="d-flex justify-content-between flex-column flex-sm-row p-3">
         <div class="d-flex align-items-center">
             <img class="logo" src="../multi/logopana.png" alt="Logo panaderia">
             <h1 class="nombre">La Flor del Trigo</h1>
         </div>
         <div class="text-right">
-            <h2>Proximamente encontranos en nuestras redes!</h2>
+            <h2 class="proximamente">Proximamente encontranos en nuestras redes!</h2>
             <div class="d-flex justify-content-evenly">
                 <a href=""><img src="../multi/facebook.png" alt="facebook" class="redes"></a>
                 <a href=""><img src="../multi/instagram.png" alt="instagram" class="redes"></a>
